[gd_scene load_steps=4 format=2]

[ext_resource path="res://square.tscn" type="PackedScene" id=1]
[ext_resource path="res://Platfrom.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 112, 112 )

[node name="Platfrom" type="KinematicBody2D"]
scale = Vector2( 0.4, 0.4 )
script = ExtResource( 2 )

[node name="CollisionPolygon2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
one_way_collision_margin = 128.0

[node name="square1" parent="." instance=ExtResource( 1 )]
modulate = Color( 0.172549, 0.172549, 0.172549, 1 )

[node name="square2" parent="." instance=ExtResource( 1 )]
modulate = Color( 0.172549, 0.172549, 0.172549, 1 )

[node name="square3" parent="." instance=ExtResource( 1 )]
modulate = Color( 0.172549, 0.172549, 0.172549, 1 )

[node name="square4" parent="." instance=ExtResource( 1 )]
modulate = Color( 0.172549, 0.172549, 0.172549, 1 )
